--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,19 +5,21 @@
   <meta name="viewport" content="width=device-width">
   <title>校卖部</title>
   <link rel='stylesheet' href='/stylesheets/css/main.css' />
+  <link rel='stylesheet' href='/stylesheets/css/index-cart.css' />
 </head>
 <body>
 <div class="index">
   <div class="head">
     <div class="head-inner">
-      <div class="h-r-left">
-        校卖部
+      <div class="h-r-left" style="position: relative;top:0;">
+        <!--校卖部-->
+        <img src="/images/logo6.png">
       </div>
 
-      <p class="search-box"><input class="search-input" type="search" placeholder="请输入关键字">
+      <p class="search-box"><input class="search-input" style="width:405px;position: relative;top:-5px;" type="search" placeholder="请输入关键字">
         <span class="search-btn">搜 索</span></p>
 
-      <div class="h-right">
+      <div class="h-right" style="position: relative; top: 0;">
         <div id="person_info" class="clearfix">
           <div class="avatar">
               <img src="/images/icon-person.png" style="display: inline-block;width: 100%;height: 100%">
@@ -100,13 +102,13 @@
                       <input name="cs_anchor1" autocomplete="off" id="cs_pause1" type="radio" class="cs_anchor" >
                       <ul>
                         <div style="width: 100%;height: 100%; visibility: hidden; font-size: 0px; line-height: 0;">
-                          <img src="/images/index-banner.jpg" style="width: 100%;">
+                          <img src="/images/index-banner1.jpg" style="width: 100%;">
                         </div>
                         <li class="num0 img">
-                          <img src="/images/index-banner.jpg" alt="Clouds" title="Clouds" />
+                          <img src="/images/index-banner1.jpg" alt="Clouds" title="Clouds" />
                         </li>
                         <li class="num1 img">
-                          <img src="/images/index-banner1.jpg" alt="Typewriter" title="Typewriter" />
+                          <img src="/images/banner2.png" alt="Typewriter" title="Typewriter" />
                         </li>
                         <li class="num2 img">
                           <img src="/images/index-banner3.jpg" alt="Bicycle" title="Bicycle" />
@@ -167,6 +169,151 @@
     </div>
     <div class="content-part2">
       <div class="c-part2-inner">
+        <div class="j_channel channel-con j_exposureCon fp-floor" data-floorname="Channel" data-spm="2015039" data-spm-max-idx="10">
+          <div class="module-body j_channelBody clearfix" style="opacity: 1;">
+            <div class="channel-column color-type-0  ">
+              <div class="column-title">
+                <span class="icon type0"></span>
+                <span class="text">校园节拍</span>
+              </div>
+
+              <a href="/classSearch1" target="_blank" data-exposure="//ac.mmstat.com/1.gif?tpp_scm=1007.12772.30304.101200300000000&amp;tpp_pvinfo=0_9_521367145823_9_pc_0-1_9_15374907248_9_pc_0&amp;tpp_pvid=5de59ca6-71cc-45eb-8635-80084175ae8d&amp;tpp_clkinfo=1_9_15374907248_9_pc_0" data-spm-anchor-id="875.7931836/A.2015039.1">
+                <div class="item-title">焕新</div>
+                <div class="item-sub-title">人气校园新品</div>
+                <div class="img-con">
+                  <div class="img-mask"></div>
+                  <img alt="" src="/images/cloth3.jpg" style="display: block; border-radius: 50% 50%;">
+                </div>
+              </a>
+
+              <div class="seprate"></div>
+
+              <a href="/classSearch1" target="_blank" >
+                <div class="item-title">气质生活</div>
+                <div class="item-sub-title">精致时尚青春</div>
+                <div class="img-con">
+                  <div class="img-mask"></div>
+                  <img alt="" src="/images/goods4.jpg" style="display: block; border-radius: 50% 50%;" width="100%">
+                </div>
+              </a>
+
+            </div>
+
+            <div class="channel-column color-type-1  ">
+              <div class="column-title">
+                <span class="icon type1"></span>
+                <span class="text">青春酷玩</span>
+              </div>
+
+              <a href="/classSearch5" target="_blank" class="channel-item j_exposureParam" data-exposure="" data-spm-anchor-id="875.7931836/A.2015039.3">
+                <div class="item-title">户外天地</div>
+                <div class="item-sub-title">人气装备</div>
+                <div class="img-con">
+                  <div class="img-mask"></div>
+                  <img alt="" src="/images/sport1.jpg" style="display: block; border-radius: 50% 50%;">
+                </div>
+              </a>
+
+              <div class="seprate"></div>
+
+              <a href="/classSearch5" target="_blank" class="channel-item j_exposureParam" data-exposure="" data-spm-anchor-id="875.7931836/A.2015039.4">
+                <div class="item-title">酷玩街</div>
+                <div class="item-sub-title">神器大集结</div>
+                <div class="img-con">
+                  <div class="img-mask"></div>
+                  <img alt="" src="/images/goods14.jpg" style="display: block; border-radius: 50% 50%;" width="100%">
+                </div>
+              </a>
+
+            </div>
+
+            <div class="channel-column color-type-2  ">
+              <div class="column-title">
+                <span class="icon type2"></span>
+                <span class="text">暖心礼品</span>
+              </div>
+
+              <a href="/classSearch4" target="_blank" class="channel-item j_exposureParam" data-exposure="//ac.mmstat.com/1.gif?tpp_scm=1007.12772.30304.101200300000000&amp;tpp_pvinfo=0_9_36757810292_9_pc_0-1_9_43518932804_9_pc_0&amp;tpp_pvid=d223ca68-bf3a-450e-806a-c3f0ec5065c4&amp;tpp_clkinfo=0_9_36757810292_9_pc_0" data-spm-anchor-id="875.7931836/A.2015039.5">
+                <div class="item-title">必抢</div>
+                <div class="item-sub-title">送同学送老师</div>
+                <div class="img-con">
+                  <div class="img-mask"></div>
+                  <img alt="" src="/images/goods2.jpg" style="display: block; border-radius: 50% 50%;">
+                </div>
+              </a>
+
+              <div class="seprate"></div>
+
+              <a href="/classSearch4" target="_blank" class="channel-item j_exposureParam" data-exposure="" data-spm-anchor-id="875.7931836/A.2015039.6">
+                <div class="item-title">青春恋曲</div>
+                <div class="item-sub-title">我的青春刚刚好</div>
+                <div class="img-con">
+                  <div class="img-mask"></div>
+                  <img alt="" src="/images/goods5.jpg" style="display: block; border-radius: 50% 50%;" width="100%">
+                </div>
+              </a>
+
+            </div>
+
+            <div class="channel-column color-type-3   last-990 ">
+              <div class="column-title">
+                <span class="icon type3"></span>
+                <span class="text">书海畅游</span>
+              </div>
+
+              <a href="/classSearch0" target="_blank" class="channel-item j_exposureParam" data-exposure="" data-spm-anchor-id="875.7931836/A.2015039.7">
+                <div class="item-title">必修课</div>
+                <div class="item-sub-title">青春不逃课</div>
+                <div class="img-con">
+                  <div class="img-mask"></div>
+                  <img alt="" src="/images/goods8.jpg" style="display: block; border-radius: 50% 50%;">
+                </div>
+              </a>
+
+              <div class="seprate"></div>
+
+              <a href="/classSearch0" target="_blank" class="channel-item j_exposureParam" data-exposure="" data-spm-anchor-id="875.7931836/A.2015039.8">
+                <div class="item-title">名著赏析</div>
+                <div class="item-sub-title">轻嗅书香气</div>
+                <div class="img-con">
+                  <div class="img-mask"></div>
+                  <img alt="" src="/images/goods17.jpg" style="display: block; border-radius: 50% 50%;" width="100%">
+                </div>
+              </a>
+
+            </div>
+
+            <div class="channel-column color-type-4  last-1230  ">
+              <div class="column-title">
+                <span class="icon type4"></span>
+                <span class="text">疯狂吃货</span>
+              </div>
+
+              <a href="/classSearch2" target="_blank" class="channel-item j_exposureParam" data-exposure="" data-spm-anchor-id="875.7931836/A.2015039.9">
+                <div class="item-title">校园美食家</div>
+                <div class="item-sub-title">这里也有意想不到的美味</div>
+                <div class="img-con">
+                  <div class="img-mask"></div>
+                  <img alt="" src="/images/food3.jpg" style="display: block; border-radius: 50% 50%;">
+                </div>
+              </a>
+
+              <div class="seprate"></div>
+
+              <a href="/classSearch2" target="_blank" class="channel-item j_exposureParam" data-exposure="" data-spm-anchor-id="875.7931836/A.2015039.10">
+                <div class="item-title">狂吃狂吃</div>
+                <div class="item-sub-title">青春就要甜甜的</div>
+                <div class="img-con">
+                  <div class="img-mask"></div>
+                  <img alt="" src="/images/goods1.jpg" style="display: block; border-radius: 50% 50%;" width="100%">
+                </div>
+              </a>
+
+            </div>
+          </div>
+
+        </div>
+
         <p class="part-title">新单速递<span>.&nbsp;.&nbsp;.</span></p>
         <div class="c-part2-new">
           <ul class="c-part2-new-ul" id="orderList">
