--- a/views/orderClasses.ejs
+++ b/views/orderClasses.ejs
@@ -10,7 +10,8 @@
     <div class="head">
         <div class="head-inner">
             <div class="h-r-left">
-                校卖部
+                <!--校卖部-->
+                <img src="/images/logo6.png">
             </div>
 
             <p class="search-box"><input class="search-input" type="search" placeholder="请输入关键字">
@@ -98,6 +99,15 @@
                     </div>
                 </div>
             </div>
+    </div>
+
+    <div class="cart-icon-box">
+        <div class="cart-icon-box-inner">
+            <a href="/getCart"><img src="/images/cart2.png" class="icon-cart"></a>
+            <span class="icon-cart-txt">
+                <img class="icon-row" src="/images/icon-row.png">&nbsp;&nbsp;&nbsp;我的购物车
+            </span>
+        </div>
     </div>
 
 </div>
