--- a/views/orderOnline.ejs
+++ b/views/orderOnline.ejs
@@ -10,7 +10,8 @@
     <div class="head">
         <div class="head-inner">
             <div class="h-r-left">
-                校卖部
+                <!--校卖部-->
+                <img src="/images/logo6.png">
             </div>
 
             <p class="search-box"><input class="search-input" type="search" placeholder="请输入关键字">
@@ -25,6 +26,7 @@
                         <div class="center-nav">
                             <p class="h-r-userName">欢迎，<%= username%></p>
                             <p class="center-nav-list"><a href="/toCenter">个人中心</a></p>
+                            <p class="center-nav-list"><a href="/getCart">我的购物车</a></p>
                             <p class="center-nav-list"><a href="/signIn">退出登录</a></p>
                         </div>
                     </div>
