--- a/views/payFor.ejs
+++ b/views/payFor.ejs
@@ -15,7 +15,8 @@
     <div class="head">
         <div class="head-inner">
             <div class="h-r-left">
-                校卖部
+                <!--校卖部-->
+                <img src="/images/logo6.png">
             </div>
 
             <p class="search-box"><input class="search-input" type="search" placeholder="请输入关键字">
