--- a/views/signIn.ejs
+++ b/views/signIn.ejs
@@ -9,11 +9,12 @@
 <body>
 <div class="sign">
     <!--<img src="/images/bg.jpg" class="bg-img">-->
-    <p class="sign-title">校卖部</p>
+    <p class="sign-title"><!--校卖部-->
+        <img src="/images/logo6.png" style="width: 150px;margin-top: 6px;"></p>
     <div class="signBox-inner">
         <p class="sign-bg"><img src="/images/sign.png"></p>
         <div class="sign">
-            <p class="login-title">用户登陆</p>
+            <p class="login-title">用户登录</p>
             <div class="signText">
                 <form id="zcForm">
                     <p style="width: 260px;height: 38px;border: 2px solid #cbcbcb;">
@@ -24,7 +25,7 @@
                         <span><img src="/images/icon-password.png" style="display: inline-block;position: relative;">
                         </span><input type="password" id="password" name="password" class="signText-input" placeholder="密 码">
                     </p><br/>
-                    <button class="signIn signBtn">登 陆</button>
+                    <button class="signIn signBtn">登 录</button>
                     <p class="toSignIn" id="toSignUp"><a href="/signUp" class="to-sign">>> 去注册</a></p>
                     <p id="warning"></p>
                 </form>
