--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -8,7 +8,8 @@
 </head>
 <body>
 <div class="sign">
-    <p class="sign-title">校卖部</p>
+    <p class="sign-title"><!--校卖部-->
+        <img src="/images/logo6.png" style="width: 150px;margin-top: 6px;"></p>
     <div class="signBox-inner">
         <p class="sign-bg"><img src="/images/sign.png"></p>
         <div class="sign">
